# Some-game

./: .gitignore  Application.cpp  Application.h  CMakeCache.txt  CMakeLists.txt  Icon.h  Some-game.sln  State_Test.cpp  State_Test.h  test.vcxproj  test.vcxproj.filters
Source/: Application.cpp  Application.h  Constants.hpp  Icon.h  Main.cpp  Settings.cpp  Settings.h  Signal.h  Signal.hpp  Window.cpp  Window.h
Source/Gameplay/: AnimationHandler.cpp  AnimationHandler.h
Source/Gameplay/Entities/: Entity.cpp  Entity.h  Player.cpp  Player.h
Source/Gameplay/World/: AnimatedBlock.cpp  AnimatedBlock.h  Block.cpp  Block.h  Level.cpp  Level.h  TilesetManager.cpp  TilesetManager.h
Source/Resourse_Managers/: AnimationManager.cpp  AnimationManager.h  ResourseManager.h  Resourses.h  Resourses.hpp  TilesetManager.cpp  TilesetManager.h
Source/States/: Main_menu.cpp  Main_menu.h  Playing_state.cpp  Playing_state.h  Splash_screen.cpp  Splash_screen.h  State_Base.cpp  State_Base.h  State_Test.cpp  State_Test.h  Test_state.cpp  Test_state.h
Source/Tools/: ColorFadeManager.cpp  ColorFadeManager.h  FadeManager.cpp  FadeManager.h  FpsCounter.cpp  FpsCounter.h  Math.hpp  Random.hpp  Statistics.cpp  Statistics.h  json.hpp
Source/UI/: Button.cpp  Button.h  Elements.hpp  EmptyElement.h  TestElement.cpp  TestElement.h  UIElement.cpp  UIElement.h
Tiled_map_editor/levels/: level_1.tmx
Tiled_map_editor/tilesets/: tileset_1.tsx
data/: settings.json
data/levels/: level_1.json
data/tilesets/: tileset_1.json  tileset_2.json
